JavaScript Einführung Gruppenarbeit Aufgaben 1 bis 2 fertig.

--- a/JavaScript Einführung/index.html
+++ b/JavaScript Einführung/index.html
@@ -8,7 +8,11 @@
 </head>
 <body id="bd">
     <div id="a1">
-        <div id="a2">Dies ist ein <em>Text</em></div>
+        <div id="a2">
+            Dies ist ein
+            <em>Text</em>
+            ...
+        </div>
     </div>
     <div id="b1">
         <img src="excalidraw.png">
